--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
         <div class="con">
 
             <h1>Solve Through</h1>
-            <p> Whatever Solutions You Are Hoping To get are Available in our website , and we will provide you Professional Maths Solutions in Every step of the way. Take a look at our site and see what can we do for you today. </p>
+            <p> Whatever Solutions You Are Hoping To get are Available in our App , and we will provide you Professional Maths Solutions in Every step of the way. Take a look at our App and see what can we do for you today. </p>
 
         </div>
     </div>
